@@ -1,4 +1,4 @@
-FROM openjdk:16
+FROM openjdk:17
 MAINTAINER CoderNoOne firelight.code@gmail.com
 
 ARG DEPENDENCY=target/dependency
@@ -6,7 +6,7 @@ COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY ${DEPENDENCY}/META-INF /app/META-INF
 COPY ${DEPENDENCY}/BOOT-INF/classes /app
 
-ENTRYPOINT ["java", "-cp", "app:app/lib/*", "--enable-preview", "-Dspring.profiles.active=docker", "-Djava.net.preferIPv4Stack=true", "com.app.CinemaApplication"]
+ENTRYPOINT ["java", "-cp", "app:app/lib/*","-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:5005", "-Dspring.profiles.active=docker", "-Djava.net.preferIPv4Stack=true", "com.app.CinemaApplication"]
 
 #Za kazdym razem, kiedy ladujemy FAT JAR musimy od nowa
 #wgrywac wszystko co w nim jest. A co w nim jest?
